[build-system]
requires = [ "setuptools", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "pyscan_tlk"
dynamic=["version"]
requires-python = ">= 3.7"
description = "Thorlabs Kinesis python wrappers"
keywords = [ "thorlabs", "kinesis", "instrument control", "science" ]
dependencies = [ "comtypes" ]
readme = {file = "README.md", content-type = "text/markdown"}

  [[project.authors]]
  name = "Andy Mounce"
  email = "amounce@sandia.gov"

[tools.setuptools]
packages = ["pyscan_tlk"]

[tool.setuptools.dynamic]
version = {file = "pyscan_tlk.version.py"}
